@@ -210,6 +210,7 @@ tasks.withType(Test).configureEach {
         '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
         '--add-opens', 'java.base/java.util=ALL-UNNAMED',
         '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
     ]
 }
 
